@@ -210,6 +210,7 @@ void deliver_fail(dpacket p, const char *err); /* bounce a packet intelligently 
 void deliver_instance(instance i, dpacket p); /* deliver packet TO the instance, if the result != r_DONE, you have to handle the packet! */
 instance deliver_hostcheck(char const* host); /* util that returns the instance handling this hostname for normal packets */
 bool deliver_is_uplink(instance i); // checks if an instance is configured to be the uplink
+std::set<Glib::ustring> deliver_routed_hosts(ptype type, instance i);
 
 /*** global logging/signal symbols ***/
 #define LOGT_LEGACY 1
