@@ -1,3 +1,12 @@
+2008-09-07  Matthias Wimmer  <m@tthias.eu>
+
+    * jabberd/lib/jabberid.cc: fix UTF-8 handling in JabberIDs
+    * jsm/modules/mod_roster.cc: start fixing duplicate roster item problem
+    * jabberd/jabberd.h: fixing problem with dynamic routing
+    * jabberd/base/base_connect.cc: same
+    * jabberd/base/base_accept.cc: same
+    * jabberd/deliver.cc: same
+
 2008-05-05  Matthias Wimmer  <m@tthias.eu>
 
     * jabberd/mio_tls.cc: patch by Martin Matuschka to support newer GnuTLS
